packages/typ/tests/fixtures/diagnostics/0248_fun_polymorphic_record_field_mismatch_01.ml.expected
File "0248_fun_polymorphic_record_field_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0248_fun_polymorphic_record_field_mismatch_01 is not a valid module name.

File "0248_fun_polymorphic_record_field_mismatch_01.ml", line 2, characters 43-53:
2 | let bad_alpha : poly_alpha = { run_alpha = fun _ -> 0 }
                                               ^^^^^^^^^^
Error: This field value has type int -> int which is less general than
         'a. 'a -> 'a
       The type int is not a type variable.
